[FEAT] 개발자 추천 벡터 검색 적용 및 테스트 환경 pgvector 설정 (#178)
[Feat] 개발자 추천 벡터 검색 적용 및 테스트 환경 pgvector 설정

  - MemberRecommendRepository 추가하여 벡터 유사도 기반 추천 쿼리 구현
  - MemberQueryServiceImpl 추천 로직을 임베딩 벡터 검색 방식으로 리팩토링
  - ProjectEmbeddingRepository에 임베딩 존재 확인 메서드 추가
  - 테스트 환경 pgvector extension 초기화 설정 추가
  - 벡터 검색 추천 테스트 코드 추가

  IssueNum #161